--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
 WEBUI_SECRET_KEY="Set your secret key here"
 
 #rag
-RAG_EMBEDDING_MODEL=sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2
+CHUNK_SIZE=512
+CHUNK_OVERLAP=75
 RAG_EMBEDDING_BATCH_SIZE=8
+RAG_EMBEDDING_MODEL=sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2
 RAG_RERANKING_MODEL=hotchpotch/japanese-reranker-tiny-v2
-CHUNK_SIZE=500
